--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Page Mate</title>
 </head>
 <body>
-    
+    <header>
+        <div id="mainHeader">
+            <img id="pmlogo" src="img/pmlogo.jpg" alt="logo">
+            <h1>Page Mate</h1>
+            <button id="menu">Menu</button>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="search.html">Search</a>
+            <a href="list.html">Your List</a>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <h1>Web Frontend Developement I</h1>
+        <div id="names">
+            <p>Natalie Tesam</p>
+            <p>Jenna McHargue</p>
+        </div>
+    </footer>
 </body>
 </html>
