--- a/src/search.html
+++ b/src/search.html
@@ -35,6 +35,7 @@
                 <option value="spanish">Spanish</option>
                 </select>
             </form>
+            <button id="searchButton">Search</button>
         </div>
     </main>
     <footer>
