--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <script src="js/home-page.js" defer></script>
     <title>Page Mate</title>
 </head>
 <body>
@@ -20,6 +21,8 @@
         </nav>
     </header>
     <main>
+
+
 
     </main>
     <footer>
