updated main html

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,36 @@
         </nav>
     </header>
     <main>
-
-
-
+        <section id="intro">
+            <img src="img/book_placeholder.png" alt="introduction image" />
+            <div>
+              <h2>Welcome to PageMate,</h2>
+              <p>your ultimate companion for organizing your reading journey! Whether 
+                you're a casual reader or a dedicated bookworm, PageMate makes it easy to discover your next 
+                favorite book. Browse and search for books, dive into detailed descriptions, and curate your 
+                personalized booklists. Add titles to your To Be Read list, track the books you’ve finished, 
+                and watch your reading accomplishments grow. With PageMate, managing your literary adventures 
+                has never been simpler—or more fun!</p>
+              <button>Explore</button>
+            </div>
+          </section>
+          <section id="popular">
+            <h2>Popular</h2>
+            <div id="popularBooks">
+              <div class="book">
+                <img src="img/book_placeholder.png" alt="book cover" />
+                <h3>Book Title</h3>
+              </div>
+              <div class="book">
+                <img src="img/book_placeholder.png" alt="book cover" />
+                <h3>Book Title</h3>
+              </div>
+              <div class="book">
+                <img src="img/book_placeholder.png" alt="book cover" />
+                <h3>Book Title</h3>
+              </div>
+            </div>
+          </section>
     </main>
     <footer>
         <h1>Web Frontend Developement I</h1>
