search menu toggle

--- a/src/search.html
+++ b/src/search.html
@@ -15,7 +15,7 @@
             <h1>Page Mate</h1>
             <button id="menu">Menu</button>
         </div>
-        <nav>
+        <nav class="global-nav-toggle">
             <a href="index.html">Home</a>
             <a href="search.html">Search</a>
             <a href="list.html">Your List</a>
