search book image

--- a/src/search.html
+++ b/src/search.html
@@ -31,13 +31,14 @@
                 <label for="year">Year:</label>
                 <input type="text" name="year" id="year" placeholder="Year">
                 <label for="language">Language(two letters):</label>
-                <input type="tel" name="language" id="language">
+                <input type="tel" name="language" id="language" placeholder="ex: en, fi, fr">
             </form>
             <button id="searchButton">Search</button>
         </div>
         <div class="bookList">
 
         </div>
+        <button id="nextButton">Next</button>
     </main>
     <footer>
         <h1>Web Frontend Developement I</h1>
