--- a/src/search.html
+++ b/src/search.html
@@ -36,7 +36,9 @@
             <button id="searchButton">Search</button>
         </div>
         <div class="bookList">
-
+            <div class="book">
+                <h3>Loading Results...</h3>
+              </div>
         </div>
         <button id="nextButton">Next</button>
     </main>
