--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,18 @@
           <section id="popular">
             <h2>Popular</h2>
             <div id="popularBooks">
+              <div class="book">
+                <img src="img/book_placeholder.png" alt="">
+                <h3>Loading...</h3>
+              </div>
+              <div class="book">
+                <img src="img/book_placeholder.png" alt="">
+                <h3>Loading...</h3>
+              </div>
+              <div class="book">
+                <img src="img/book_placeholder.png" alt="">
+                <h3>Loading...</h3>
+              </div>
             </div>
           </section>
     </main>
