--- a/src/list.html
+++ b/src/list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/list.css">
     <title>Page Mate</title>
 </head>
 <body>
@@ -20,7 +21,48 @@
         </nav>
     </header>
     <main>
-
+        <div id="savedList">
+            <h2>Saved</h2>
+            <div id="savedBooks">
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+            </div>
+        </div>
+        <div id="readList">
+            <h2>Read</h2>
+            <div id="readBooks">
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+                <div class="book">
+                    <img src="img/book_placeholder.png" alt="">
+                    <h3>Book Title</h3>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <h1>Web Frontend Developement I</h1>
