minor edits to list html and css

--- a/src/list.html
+++ b/src/list.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/list.css">
+    <script src="list.js" defer></script>
     <title>Page Mate</title>
 </head>
 <body>
@@ -26,19 +27,19 @@
             <div id="savedBooks">
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
             </div>
         </div>
@@ -47,19 +48,19 @@
             <div id="readBooks">
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
                 <div class="book">
                     <img src="img/book_placeholder.png" alt="">
-                    <h3>Book Title</h3>
+                    <h3>Loading...</h3>
                 </div>
             </div>
         </div>
