--- a/src/list.html
+++ b/src/list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/list.css">
-    <script src="list.js" defer></script>
+    <script src="js/list.js" defer></script>
     <title>Page Mate</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             <h1>Page Mate</h1>
             <button id="menu">Menu</button>
         </div>
-        <nav>
+        <nav class="global-nav-toggle">
             <a href="index.html">Home</a>
             <a href="search.html">Search</a>
             <a href="list.html">Your List</a>
