--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/home-page.js" defer></script>
+    <script src="js/index.js" type="module" defer></script>
     <title>Page Mate</title>
 </head>
 <body>
