--- a/src/list.html
+++ b/src/list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/list.css">
-    <script src="js/list.js" defer></script>
+    <script src="js/list.js" type="module" defer></script>
     <title>Page Mate</title>
 </head>
 <body>
