changed placeholder text

--- a/src/list.html
+++ b/src/list.html
@@ -25,43 +25,13 @@
         <div id="savedList">
             <h2>Saved</h2>
             <div id="savedBooks">
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
+                <p>Add books to your saved booklist to display them here.</p>
             </div>
         </div>
         <div id="readList">
             <h2>Read</h2>
             <div id="readBooks">
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
-                <div class="book">
-                    <img src="img/book_placeholder.png" alt="">
-                    <h3>Loading...</h3>
-                </div>
+                <p>Add books from your saved booklist to display them here.</p>
             </div>
         </div>
     </main>
