functional swap button

--- a/src/list.html
+++ b/src/list.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        <div id="savedList">
+        <div id="savedList" class="bookList">
             <h2>Saved</h2>
             <div id="savedBooks">
                 <div class="book">
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div id="readList">
+        <div id="readList" class="bookList">
             <h2>Read</h2>
             <div id="readBooks">
                 <div class="book">
