wrote note in page

--- a/src/list.html
+++ b/src/list.html
@@ -22,6 +22,7 @@
         </nav>
     </header>
     <main>
+        <p>Page refresh needed to see swapped lists. Click more info button for seperate books.</p>
         <div id="savedList" class="bookList">
             <h2>Saved</h2>
             <div id="savedBooks">
