--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <img src="img/book_placeholder.png" alt="introduction image" />
             <div>
               <h2>Welcome to PageMate,</h2>
-              <p>your ultimate companion for organizing your reading journey! Whether 
+              <p>Your ultimate companion for organizing your reading journey! Whether 
                 you're a casual reader or a dedicated bookworm, PageMate makes it easy to discover your next 
                 favorite book. Browse and search for books, dive into detailed descriptions, and curate your 
                 personalized booklists. Add titles to your To Be Read list, track the books you’ve finished, 
